<resources>
    <string name="app_name" translatable="false">2FAuth</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_scan">Scan QR Code</string>
    <string name="menu_about">About</string>
    <string name="msg_invalid_qr_code">Invalid QR Code</string>
    <string name="msg_account_added">Account added</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="msg_confirm_delete">Are you sure you want do remove this account?</string>
    <string name="msg_account_removed">Account removed</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Remove</string>
    <string name="msg_camera_permission">Camera permission not granted</string>
    <string name="mag_not_removed_locked">The account is marked as favourite. You can\'t delete it.</string>
    <string name="str_algorithm">Algorithm</string>
    <string name="str_accept">Accept</string>
    <string name="str_favourite">Favourite account</string>
    <string name="str_label">Label</string>
    <string name="str_account">Account</string>
    <string name="str_issuer">Issuer</string>
    <string name="str_period">Period</string>
    <string name="str_digits">Digits</string>
    <string name="str_secret">Secret</string>
    <string name="login_failed">The login has failed.</string>
    <string name="use_password">Use password</string>
    <string name="prompt_password">Password</string>
    <string name="bioAuth">Biometric Authentication</string>
    <string name="bioAuthSub">Login using fingerprint authentication</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="usebiometric.title">Use biometric authentication</string>
    <string name="usebiometric.on">Biometric authentication will be required to open application.</string>
    <string name="usebiometric.off">The application will be opened without authentication.</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="behaviour">Behaviour</string>
    <string name="copyclipboard.title">Copy the number to clipboard</string>
    <string name="copyclipboard.on">The number will be copied to clipboard when tap the account.</string>
    <string name="copyclipboard.off">The number won\'t be copied to clipboard when tap the account.</string>
    <string name="perform_export">Export accounts to a file.</string>
    <string name="export_summary">Perform an export of all accounts now.</string>
    <string name="category_import_export">Import / Export</string>
    <string name="perform_import">Import account from a file.</string>
    <string name="import_summary">Perform an import of accounts from a file.</string>
    <string name="cmdexport">Export</string>
    <string name="cmdimport">Import</string>
    <string name="pwd_not_match">Passwords does not match.</string>
    <string name="enter_pwd">Enter your password to access.</string>
    <string name="prompt_password2">Repeat password</string>
    <string name="enter_pwd_new">Enter your password and repeat it to access. From that moment on, that will be your input password and the data files will be encrypted with it.</string>
    <string name="export_to_encrypted">You are going to export all accounts to an encrypted file. Are you sure?</string>
    <string name="select_a_file">Select a file</string>
    <string name="import_from_encrypted">You are going to import accounts from an non-encrypted file. Are you sure?</string>
    <string name="link_bierbaumer" translatable="false"><a href="https://github.com/0xbb">Bruno Bierbaumer</a></string>
    <string name="link_commons_codec" translatable="false"><a href="https://commons.apache.org/proper/commons-codec/">Apache Commons Codec</a></string>
    <string name="link_zxing" translatable="false"><a href="https://github.com/zxing/zxing">ZXing</a></string>
    <string name="link_zxing_embedded" translatable="false"><a href="https://github.com/journeyapps/zxing-android-embedded">ZXing Android Embedded</a></string>
    <string name="link_draglistview" translatable="false"><a href="https://github.com/woxblom/DragListView">DragListView</a></string>
    <string name="or_biometric">or <a href="">connect using biometrics</a></string>
    <string name="acknowledgments">Acknowledgments</string>
    <string name="err_loading_accounts">Error loading accounts.</string>
    <string name="err_dropping_account">Error dropping account.</string>
    <string name="err_editing_account">Error editing account.</string>
    <string name="err_importing_accounts">Error importing accounts.</string>
    <string name="err_deleting_account">Error deleting account.</string>
    <string name="prompt_file">File</string>


    <string-array name="algorithms">
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>
    <string-array name="periods">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string name="process_ok">Process finished successfully.</string>
    <string name="prompt_process_err">Process finished with errors.</string>

</resources>
