<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/security">

        <SwitchPreferenceCompat
                app:iconSpaceReserved="false"
                app:key="use_biometric"
                app:title="@string/usebiometric.title"
                app:summaryOn="@string/usebiometric.on"
                app:summaryOff="@string/usebiometric.off"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/behaviour">

        <SwitchPreferenceCompat
                app:iconSpaceReserved="false"
                app:key="copy_clipboard"
                app:title="@string/copyclipboard.title"
                app:summaryOn="@string/copyclipboard.on"
                app:summaryOff="@string/copyclipboard.off"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/category_import_export">

        <Preference
                app:iconSpaceReserved="false"
                app:key="perform_export"
                app:title="@string/perform_export"
                app:summary="@string/export_summary"
                app:widgetLayout="@layout/settings_preferences_export"/>

        <Preference
                app:iconSpaceReserved="false"
                app:key="perform_import"
                app:title="@string/perform_import"
                app:summary="@string/import_summary"
                app:widgetLayout="@layout/settings_preferences_import"/>
    </PreferenceCategory>
</PreferenceScreen>