<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="375dp"
              android:layout_height="320dp"
              android:background="@android:color/background_light"
              android:padding="10dp" >

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

    <TextView android:text="2FAuth 1.0.0"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

    <TextView android:text="By José Antonio Férriz"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

    <TextView android:text="Based on OTP authenticator (by Bruno Bierbaumer)"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

    <TextView android:text="@string/acknowledgments"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:layout_marginTop="20dp"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/bierbaumer"
            android:text="@string/link_bierbaumer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:clickable="true"
            android:textColorLink="#0580E1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/linkcommons"
            android:text="@string/link_commons_codec"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:clickable="true"
            android:textColorLink="#0580E1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/ZXing"
            android:text="@string/link_zxing"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:clickable="true"
            android:textColorLink="#0580E1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/ZXingEmbedded"
            android:text="@string/link_zxing_embedded"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:clickable="true"
            android:textColorLink="#0580E1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/draglistview"
            android:text="@string/link_draglistview"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:clickable="true"
            android:textColorLink="#0580E1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>