<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="15dp"
              android:background="@android:color/background_light"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <ImageView
            android:id="@+id/imgBiometric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mfa"
            android:layout_marginBottom="40dp"
            android:adjustViewBounds="true"/>
    <TextView
            android:id="@+id/lblHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/enter_pwd" />

    <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" >
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            <TextView
                    android:layout_width="wrap_content"
                    android:paddingEnd="15dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_password"/>
            <EditText
                    android:id="@+id/password"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"/>
            <ImageView
                    android:id="@+id/cmdHideShow"
                    android:src="@drawable/hide"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

        </TableRow>

        <TableRow
                android:id="@+id/secondPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            <TextView
                    android:layout_width="wrap_content"
                    android:paddingEnd="15dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_password2"/>
            <EditText
                    android:id="@+id/password2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password2"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"/>
            <ImageView
                    android:id="@+id/cmdHideShow2"
                    android:src="@drawable/hide"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

        </TableRow>
    </TableLayout>


    <Button
            android:layout_marginTop="30dp"
            android:visibility="visible"
            android:id="@+id/cmdLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"/>

    <TextView
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:id="@+id/cmdBiometric"
            android:clickable="true"
            android:textColorLink="#0580E1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_biometric"/>

</LinearLayout>