<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@android:color/background_light"
        android:orientation="vertical">

    <TableRow
            android:padding="10dp"
            android:background="@drawable/grey_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/behaviour"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="italic"
                    android:text="@string/copyclipboard.title"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="Copiar el número al seleccionar la cuenta"/>
                <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/swCopy"/>
            </LinearLayout>
        </LinearLayout>
    </TableRow>

    <TableRow
            android:padding="10dp"
            android:background="@drawable/grey_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/perform_export"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="italic"
                    android:text="@string/export_summary"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/prompt_password"/>
                <EditText
                        android:layout_weight="1"
                        android:id="@+id/txtpasswordExport"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                <ImageView
                        android:id="@+id/cmdHideShowExport"
                        android:src="@drawable/hide"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/select_folder"/>
                <Button
                        android:text="..."
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/cmdSelectFolder"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtFolder"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text=""
                        android:minLines="2"
                        android:maxLines="5"
                        android:background="@drawable/grey_border"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                <Button
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/cmdExport"
                        android:text="@string/cmdexport"/>
            </LinearLayout>
        </LinearLayout>
    </TableRow>

    <TableRow
            android:padding="10dp"
            android:background="@drawable/grey_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/perform_import"/>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="italic"
                    android:text="@string/import_summary"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/prompt_password"/>
                <EditText
                        android:layout_weight="1"
                        android:id="@+id/txtpasswordImport"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                <ImageView
                        android:id="@+id/cmdHideShowImport"
                        android:src="@drawable/hide"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/select_a_file"/>
                <Button
                        android:text="..."
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/cmdSelectFile"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtFile"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text=""
                        android:minLines="2"
                        android:maxLines="5"
                        android:background="@drawable/grey_border"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                <Button
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/cmdImport"
                        android:text="@string/cmdimport"/>
            </LinearLayout>

        </LinearLayout>
    </TableRow>

</TableLayout>